--- a/pages/customer/SeeLoans.xaml
+++ b/pages/customer/SeeLoans.xaml
@@ -26,6 +26,6 @@
             </DataGrid.Columns>
         </DataGrid>
         <Button Content="RETOUR" HorizontalAlignment="Left" Margin="620,60,0,0" VerticalAlignment="Top" Width="62" Click="Button_Click" RenderTransformOrigin="2.2,-0.11"/>
-        <Button Content="RESERVATION" HorizontalAlignment="Left" Margin="470,60,0,0" VerticalAlignment="Top" Width="108" Click="Button_Click_1"/>
+        <Button Content="HISTORIQUE" HorizontalAlignment="Left" Margin="470,60,0,0" VerticalAlignment="Top" Width="108" Click="Button_Click_1"/>
     </Grid>
 </Page>
